--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,6 +9,10 @@ env:
   REGISTRY: ghcr.io
   IMAGE_NAME: sammcj/hello-world
 
+permissions:
+  contents: read
+  packages: write
+
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
@@ -115,6 +119,7 @@ jobs:
             ${{ steps.meta.outputs.tags }}
             ${{ github.sha }}
             ${{ github.ref }}
+            latest
 
       - name: Export digest
         run: |
